.cicd/k8s_dev.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: i27-eureka-dev
spec: 
  replicas: 1
  selector:
    matchLabels:
      name: i27-eureka-dev
  template:
    metadata:
      labels:
        name: i27-eureka-dev
    spec:
     imagePullSecrets:
     - name : jfrogsecret
     containers:
        - name: i27-eureka-dev
        # what image should i place here ????/
          image: DIT
          resources:
            requests: 
              memory: "128Mi"
              cpu: "250m"
            limits: 
              memory: "256Mi"
              cpu: "500m"
---
# Service 
apiVersion: v1
kind: Service
metadata: 
  name: i27-eureka-dev
spec:  
  selector: 
    name: i27-eureka-dev
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8761
  type: NodePort
